# stm-blinky

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  flash_device.sh  package.json
Src/: CMakeLists.txt  main.c
cmake/: Conversions.cmake  GenerateMapFile.cmake
cmake/toolchains/: OverrideBuildTypeSettings.cmake
cmake/toolchains/cross/: arm-none-eabi-gcc.cmake  cortex-m3.cmake  cortex-m7-hardfloat.cmake  stm32l476rg.cmake
